--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -135,14 +135,14 @@
     "# date='20230420'\n",
     "# date='20230523'\n",
     "# date='20230525'\n",
-    "# date='20240126'\n",
+    "date='20240126'\n",
     "# date='20240701'\n",
     "# date='20240706'\n",
     "# date='20240819'\n",
     "# date='20240820'\n",
     "# date='20240822'   # CAL\n",
     "# date='20240823'\n",
-    "date='20240909'\n",
+    "# date='20240909'\n",
     "# date='0'\n",
     "ver = 'V02'\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
@@ -363,7 +363,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = 0;  n_sweep2 = n_time0//2+1;  n_sweep3 = n_time0-1\n",
+    "\"\"\"\n",
+    "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
     "print(f\"[First peak - {n_sweep1}]\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
@@ -375,7 +376,8 @@
     "print(f\"[Last  peak - {n_sweep3}]\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))"
+    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -469,7 +471,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "e1244469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.epoch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "8673a1df",
    "metadata": {},
    "outputs": [],
@@ -542,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "1c09b3fe",
    "metadata": {},
    "outputs": [],
@@ -615,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "46c804a3",
    "metadata": {},
    "outputs": [],
@@ -771,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "f2b766e4",
    "metadata": {},
    "outputs": [],
@@ -837,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "9cbf9c70",
    "metadata": {},
    "outputs": [],
@@ -903,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "a4e4df4c",
    "metadata": {},
    "outputs": [],
@@ -1114,7 +1126,7 @@
    "outputs": [],
    "source": [
     "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
-    "n0 = 60;  n1 = 63;   n2 = 66\n",
+    "# n0 = 60;  n1 = 63;   n2 = 66\n",
     "p_min = p_min0;  p_max = p_max0\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "\n",
@@ -1210,7 +1222,7 @@
     "p_min = p_min0;  p_max = p_max0\n",
     "# p_min = -4.0;    p_max = -0.0\n",
     "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
-    "n0 = 64;  n1 = 65;   n2 = 66\n",
+    "# n0 = 64;  n1 = 65;   n2 = 66\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "# f_min = 80;       f_max = 2068\n",
     "\n",
@@ -1326,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "88d4f9da",
    "metadata": {},
    "outputs": [],
@@ -1389,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "9a3a9541",
    "metadata": {},
    "outputs": [],
@@ -1452,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "de2372bf",
    "metadata": {},
    "outputs": [],
@@ -1568,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "e451e67f",
    "metadata": {},
    "outputs": [],
@@ -1620,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "aede6c7b",
    "metadata": {},
    "outputs": [],
@@ -1672,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "063008da",
    "metadata": {},
    "outputs": [],
@@ -1724,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "2974bce8",
    "metadata": {},
    "outputs": [],
@@ -1966,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "113c09de",
    "metadata": {},
    "outputs": [],
@@ -2048,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "95fbbc6d",
    "metadata": {},
    "outputs": [],
@@ -2130,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "cd900c74",
    "metadata": {},
    "outputs": [],
@@ -2212,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2359,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "858b40e5",
    "metadata": {},
    "outputs": [],
