SID-3: NC/RC/LC update (with ASW2 debug & ASW3)

--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "15b77fc6",
    "metadata": {},
    "outputs": [],
@@ -1126,78 +1126,79 @@
     "E_PHAvw_2d = spec.E_ANGwu.transpose();  E_PHAvw_med = np.nanmedian(spec.E_PHAvw, axis=0)\n",
     "E_PHAwu_2d = spec.E_ANGwu.transpose();  E_PHAwu_med = np.nanmedian(spec.E_PHAwu, axis=0)\n",
     "\n",
-    "# Polsep spectrum plots\n",
-    "spec.EE_NC    = spec.EuEu_NC + spec.EvEv_NC + spec.EwEw_NC\n",
-    "EuEu_NC_2d    = spec.EuEu_NC.transpose();     EuEu_NC_med = np.nanmedian(spec.EuEu_NC,    axis=0)\n",
-    "EvEv_NC_2d    = spec.EvEv_NC.transpose();     EvEv_NC_med = np.nanmedian(spec.EvEv_NC,    axis=0)\n",
-    "EwEw_NC_2d    = spec.EwEw_NC.transpose();     EwEw_NC_med = np.nanmedian(spec.EwEw_NC,    axis=0)\n",
-    "EE_NC_2d      = spec.EE_NC.transpose();       EE_NC_med   = np.nanmedian(spec.EE_NC,      axis=0)\n",
-    "E_DoPuv_NC_2d = spec.E_DoLuv_NC.transpose();  E_DoPuv_NC_med = np.nanmedian(spec.E_DoPuv_NC, axis=0)\n",
-    "E_DoPvw_NC_2d = spec.E_DoLvw_NC.transpose();  E_DoPvw_NC_med = np.nanmedian(spec.E_DoPvw_NC, axis=0)\n",
-    "E_DoPwu_NC_2d = spec.E_DoLwu_NC.transpose();  E_DoPwu_NC_med = np.nanmedian(spec.E_DoPwu_NC, axis=0)\n",
-    "E_DoLuv_NC_2d = spec.E_DoLuv_NC.transpose();  E_DoLuv_NC_med = np.nanmedian(spec.E_DoLuv_NC, axis=0)\n",
-    "E_DoLvw_NC_2d = spec.E_DoLvw_NC.transpose();  E_DoLvw_NC_med = np.nanmedian(spec.E_DoLvw_NC, axis=0)\n",
-    "E_DoLwu_NC_2d = spec.E_DoLwu_NC.transpose();  E_DoLwu_NC_med = np.nanmedian(spec.E_DoLwu_NC, axis=0)\n",
-    "E_DoCuv_NC_2d = spec.E_DoCuv_NC.transpose();  E_DoCuv_NC_med = np.nanmedian(spec.E_DoCuv_NC, axis=0)\n",
-    "E_DoCvw_NC_2d = spec.E_DoCvw_NC.transpose();  E_DoCvw_NC_med = np.nanmedian(spec.E_DoCvw_NC, axis=0)\n",
-    "E_DoCwu_NC_2d = spec.E_DoCwu_NC.transpose();  E_DoCwu_NC_med = np.nanmedian(spec.E_DoCwu_NC, axis=0)\n",
-    "E_ANGuv_NC_2d = spec.E_ANGuv_NC.transpose();  E_ANGuv_NC_med = np.nanmedian(spec.E_ANGuv_NC, axis=0)\n",
-    "E_ANGvw_NC_2d = spec.E_ANGvw_NC.transpose();  E_ANGvw_NC_med = np.nanmedian(spec.E_ANGvw_NC, axis=0)\n",
-    "E_ANGwu_NC_2d = spec.E_ANGwu_NC.transpose();  E_ANGwu_NC_med = np.nanmedian(spec.E_ANGwu_NC, axis=0)\n",
-    "E_COHuv_NC_2d = spec.E_ANGwu_NC.transpose();  E_COHuv_NC_med = np.nanmedian(spec.E_COHuv_NC, axis=0)\n",
-    "E_COHvw_NC_2d = spec.E_ANGwu_NC.transpose();  E_COHvw_NC_med = np.nanmedian(spec.E_COHvw_NC, axis=0)\n",
-    "E_COHwu_NC_2d = spec.E_ANGwu_NC.transpose();  E_COHwu_NC_med = np.nanmedian(spec.E_COHwu_NC, axis=0)\n",
-    "E_PHAuv_NC_2d = spec.E_ANGwu_NC.transpose();  E_PHAuv_NC_med = np.nanmedian(spec.E_PHAuv_NC, axis=0)\n",
-    "E_PHAvw_NC_2d = spec.E_ANGwu_NC.transpose();  E_PHAvw_NC_med = np.nanmedian(spec.E_PHAvw_NC, axis=0)\n",
-    "E_PHAwu_NC_2d = spec.E_ANGwu_NC.transpose();  E_PHAwu_NC_med = np.nanmedian(spec.E_PHAwu_NC, axis=0)\n",
+    "if comp_mode == 2:  # Polsep RC Single\n",
+    "    # Polsep spectrum plots\n",
+    "    spec.EE_NC    = spec.EuEu_NC + spec.EvEv_NC + spec.EwEw_NC\n",
+    "    EuEu_NC_2d    = spec.EuEu_NC.transpose();     EuEu_NC_med = np.nanmedian(spec.EuEu_NC,    axis=0)\n",
+    "    EvEv_NC_2d    = spec.EvEv_NC.transpose();     EvEv_NC_med = np.nanmedian(spec.EvEv_NC,    axis=0)\n",
+    "    EwEw_NC_2d    = spec.EwEw_NC.transpose();     EwEw_NC_med = np.nanmedian(spec.EwEw_NC,    axis=0)\n",
+    "    EE_NC_2d      = spec.EE_NC.transpose();       EE_NC_med   = np.nanmedian(spec.EE_NC,      axis=0)\n",
+    "    E_DoPuv_NC_2d = spec.E_DoLuv_NC.transpose();  E_DoPuv_NC_med = np.nanmedian(spec.E_DoPuv_NC, axis=0)\n",
+    "    E_DoPvw_NC_2d = spec.E_DoLvw_NC.transpose();  E_DoPvw_NC_med = np.nanmedian(spec.E_DoPvw_NC, axis=0)\n",
+    "    E_DoPwu_NC_2d = spec.E_DoLwu_NC.transpose();  E_DoPwu_NC_med = np.nanmedian(spec.E_DoPwu_NC, axis=0)\n",
+    "    E_DoLuv_NC_2d = spec.E_DoLuv_NC.transpose();  E_DoLuv_NC_med = np.nanmedian(spec.E_DoLuv_NC, axis=0)\n",
+    "    E_DoLvw_NC_2d = spec.E_DoLvw_NC.transpose();  E_DoLvw_NC_med = np.nanmedian(spec.E_DoLvw_NC, axis=0)\n",
+    "    E_DoLwu_NC_2d = spec.E_DoLwu_NC.transpose();  E_DoLwu_NC_med = np.nanmedian(spec.E_DoLwu_NC, axis=0)\n",
+    "    E_DoCuv_NC_2d = spec.E_DoCuv_NC.transpose();  E_DoCuv_NC_med = np.nanmedian(spec.E_DoCuv_NC, axis=0)\n",
+    "    E_DoCvw_NC_2d = spec.E_DoCvw_NC.transpose();  E_DoCvw_NC_med = np.nanmedian(spec.E_DoCvw_NC, axis=0)\n",
+    "    E_DoCwu_NC_2d = spec.E_DoCwu_NC.transpose();  E_DoCwu_NC_med = np.nanmedian(spec.E_DoCwu_NC, axis=0)\n",
+    "    E_ANGuv_NC_2d = spec.E_ANGuv_NC.transpose();  E_ANGuv_NC_med = np.nanmedian(spec.E_ANGuv_NC, axis=0)\n",
+    "    E_ANGvw_NC_2d = spec.E_ANGvw_NC.transpose();  E_ANGvw_NC_med = np.nanmedian(spec.E_ANGvw_NC, axis=0)\n",
+    "    E_ANGwu_NC_2d = spec.E_ANGwu_NC.transpose();  E_ANGwu_NC_med = np.nanmedian(spec.E_ANGwu_NC, axis=0)\n",
+    "    E_COHuv_NC_2d = spec.E_ANGwu_NC.transpose();  E_COHuv_NC_med = np.nanmedian(spec.E_COHuv_NC, axis=0)\n",
+    "    E_COHvw_NC_2d = spec.E_ANGwu_NC.transpose();  E_COHvw_NC_med = np.nanmedian(spec.E_COHvw_NC, axis=0)\n",
+    "    E_COHwu_NC_2d = spec.E_ANGwu_NC.transpose();  E_COHwu_NC_med = np.nanmedian(spec.E_COHwu_NC, axis=0)\n",
+    "    E_PHAuv_NC_2d = spec.E_ANGwu_NC.transpose();  E_PHAuv_NC_med = np.nanmedian(spec.E_PHAuv_NC, axis=0)\n",
+    "    E_PHAvw_NC_2d = spec.E_ANGwu_NC.transpose();  E_PHAvw_NC_med = np.nanmedian(spec.E_PHAvw_NC, axis=0)\n",
+    "    E_PHAwu_NC_2d = spec.E_ANGwu_NC.transpose();  E_PHAwu_NC_med = np.nanmedian(spec.E_PHAwu_NC, axis=0)\n",
     "\n",
-    "spec.EE_RC    = spec.EuEu_RC + spec.EvEv_RC + spec.EwEw_RC\n",
-    "EuEu_RC_2d    = spec.EuEu_RC.transpose();     EuEu_RC_med = np.nanmedian(spec.EuEu_RC,    axis=0)\n",
-    "EvEv_RC_2d    = spec.EvEv_RC.transpose();     EvEv_RC_med = np.nanmedian(spec.EvEv_RC,    axis=0)\n",
-    "EwEw_RC_2d    = spec.EwEw_RC.transpose();     EwEw_RC_med = np.nanmedian(spec.EwEw_RC,    axis=0)\n",
-    "EE_RC_2d      = spec.EE_RC.transpose();       EE_RC_med   = np.nanmedian(spec.EE_RC,      axis=0)\n",
-    "E_DoPuv_RC_2d = spec.E_DoLuv_RC.transpose();  E_DoPuv_RC_med = np.nanmedian(spec.E_DoPuv_RC, axis=0)\n",
-    "E_DoPvw_RC_2d = spec.E_DoLvw_RC.transpose();  E_DoPvw_RC_med = np.nanmedian(spec.E_DoPvw_RC, axis=0)\n",
-    "E_DoPwu_RC_2d = spec.E_DoLwu_RC.transpose();  E_DoPwu_RC_med = np.nanmedian(spec.E_DoPwu_RC, axis=0)\n",
-    "E_DoLuv_RC_2d = spec.E_DoLuv_RC.transpose();  E_DoLuv_RC_med = np.nanmedian(spec.E_DoLuv_RC, axis=0)\n",
-    "E_DoLvw_RC_2d = spec.E_DoLvw_RC.transpose();  E_DoLvw_RC_med = np.nanmedian(spec.E_DoLvw_RC, axis=0)\n",
-    "E_DoLwu_RC_2d = spec.E_DoLwu_RC.transpose();  E_DoLwu_RC_med = np.nanmedian(spec.E_DoLwu_RC, axis=0)\n",
-    "E_DoCuv_RC_2d = spec.E_DoCuv_RC.transpose();  E_DoCuv_RC_med = np.nanmedian(spec.E_DoCuv_RC, axis=0)\n",
-    "E_DoCvw_RC_2d = spec.E_DoCvw_RC.transpose();  E_DoCvw_RC_med = np.nanmedian(spec.E_DoCvw_RC, axis=0)\n",
-    "E_DoCwu_RC_2d = spec.E_DoCwu_RC.transpose();  E_DoCwu_RC_med = np.nanmedian(spec.E_DoCwu_RC, axis=0)\n",
-    "E_ANGuv_RC_2d = spec.E_ANGuv_RC.transpose();  E_ANGuv_RC_med = np.nanmedian(spec.E_ANGuv_RC, axis=0)\n",
-    "E_ANGvw_RC_2d = spec.E_ANGvw_RC.transpose();  E_ANGvw_RC_med = np.nanmedian(spec.E_ANGvw_RC, axis=0)\n",
-    "E_ANGwu_RC_2d = spec.E_ANGwu_RC.transpose();  E_ANGwu_RC_med = np.nanmedian(spec.E_ANGwu_RC, axis=0)\n",
-    "E_COHuv_RC_2d = spec.E_ANGwu_RC.transpose();  E_COHuv_RC_med = np.nanmedian(spec.E_COHuv_RC, axis=0)\n",
-    "E_COHvw_RC_2d = spec.E_ANGwu_RC.transpose();  E_COHvw_RC_med = np.nanmedian(spec.E_COHvw_RC, axis=0)\n",
-    "E_COHwu_RC_2d = spec.E_ANGwu_RC.transpose();  E_COHwu_RC_med = np.nanmedian(spec.E_COHwu_RC, axis=0)\n",
-    "E_PHAuv_RC_2d = spec.E_ANGwu_RC.transpose();  E_PHAuv_RC_med = np.nanmedian(spec.E_PHAuv_RC, axis=0)\n",
-    "E_PHAvw_RC_2d = spec.E_ANGwu_RC.transpose();  E_PHAvw_RC_med = np.nanmedian(spec.E_PHAvw_RC, axis=0)\n",
-    "E_PHAwu_RC_2d = spec.E_ANGwu_RC.transpose();  E_PHAwu_RC_med = np.nanmedian(spec.E_PHAwu_RC, axis=0)\n",
+    "    spec.EE_RC    = spec.EuEu_RC + spec.EvEv_RC + spec.EwEw_RC\n",
+    "    EuEu_RC_2d    = spec.EuEu_RC.transpose();     EuEu_RC_med = np.nanmedian(spec.EuEu_RC,    axis=0)\n",
+    "    EvEv_RC_2d    = spec.EvEv_RC.transpose();     EvEv_RC_med = np.nanmedian(spec.EvEv_RC,    axis=0)\n",
+    "    EwEw_RC_2d    = spec.EwEw_RC.transpose();     EwEw_RC_med = np.nanmedian(spec.EwEw_RC,    axis=0)\n",
+    "    EE_RC_2d      = spec.EE_RC.transpose();       EE_RC_med   = np.nanmedian(spec.EE_RC,      axis=0)\n",
+    "    E_DoPuv_RC_2d = spec.E_DoLuv_RC.transpose();  E_DoPuv_RC_med = np.nanmedian(spec.E_DoPuv_RC, axis=0)\n",
+    "    E_DoPvw_RC_2d = spec.E_DoLvw_RC.transpose();  E_DoPvw_RC_med = np.nanmedian(spec.E_DoPvw_RC, axis=0)\n",
+    "    E_DoPwu_RC_2d = spec.E_DoLwu_RC.transpose();  E_DoPwu_RC_med = np.nanmedian(spec.E_DoPwu_RC, axis=0)\n",
+    "    E_DoLuv_RC_2d = spec.E_DoLuv_RC.transpose();  E_DoLuv_RC_med = np.nanmedian(spec.E_DoLuv_RC, axis=0)\n",
+    "    E_DoLvw_RC_2d = spec.E_DoLvw_RC.transpose();  E_DoLvw_RC_med = np.nanmedian(spec.E_DoLvw_RC, axis=0)\n",
+    "    E_DoLwu_RC_2d = spec.E_DoLwu_RC.transpose();  E_DoLwu_RC_med = np.nanmedian(spec.E_DoLwu_RC, axis=0)\n",
+    "    E_DoCuv_RC_2d = spec.E_DoCuv_RC.transpose();  E_DoCuv_RC_med = np.nanmedian(spec.E_DoCuv_RC, axis=0)\n",
+    "    E_DoCvw_RC_2d = spec.E_DoCvw_RC.transpose();  E_DoCvw_RC_med = np.nanmedian(spec.E_DoCvw_RC, axis=0)\n",
+    "    E_DoCwu_RC_2d = spec.E_DoCwu_RC.transpose();  E_DoCwu_RC_med = np.nanmedian(spec.E_DoCwu_RC, axis=0)\n",
+    "    E_ANGuv_RC_2d = spec.E_ANGuv_RC.transpose();  E_ANGuv_RC_med = np.nanmedian(spec.E_ANGuv_RC, axis=0)\n",
+    "    E_ANGvw_RC_2d = spec.E_ANGvw_RC.transpose();  E_ANGvw_RC_med = np.nanmedian(spec.E_ANGvw_RC, axis=0)\n",
+    "    E_ANGwu_RC_2d = spec.E_ANGwu_RC.transpose();  E_ANGwu_RC_med = np.nanmedian(spec.E_ANGwu_RC, axis=0)\n",
+    "    E_COHuv_RC_2d = spec.E_ANGwu_RC.transpose();  E_COHuv_RC_med = np.nanmedian(spec.E_COHuv_RC, axis=0)\n",
+    "    E_COHvw_RC_2d = spec.E_ANGwu_RC.transpose();  E_COHvw_RC_med = np.nanmedian(spec.E_COHvw_RC, axis=0)\n",
+    "    E_COHwu_RC_2d = spec.E_ANGwu_RC.transpose();  E_COHwu_RC_med = np.nanmedian(spec.E_COHwu_RC, axis=0)\n",
+    "    E_PHAuv_RC_2d = spec.E_ANGwu_RC.transpose();  E_PHAuv_RC_med = np.nanmedian(spec.E_PHAuv_RC, axis=0)\n",
+    "    E_PHAvw_RC_2d = spec.E_ANGwu_RC.transpose();  E_PHAvw_RC_med = np.nanmedian(spec.E_PHAvw_RC, axis=0)\n",
+    "    E_PHAwu_RC_2d = spec.E_ANGwu_RC.transpose();  E_PHAwu_RC_med = np.nanmedian(spec.E_PHAwu_RC, axis=0)\n",
     "\n",
-    "spec.EE_LC    = spec.EuEu_LC + spec.EvEv_LC + spec.EwEw_LC\n",
-    "EuEu_LC_2d    = spec.EuEu_LC.transpose();     EuEu_NC_med = np.nanmedian(spec.EuEu_LC,    axis=0)\n",
-    "EvEv_LC_2d    = spec.EvEv_LC.transpose();     EvEv_NC_med = np.nanmedian(spec.EvEv_LC,    axis=0)\n",
-    "EwEw_LC_2d    = spec.EwEw_LC.transpose();     EwEw_NC_med = np.nanmedian(spec.EwEw_LC,    axis=0)\n",
-    "EE_LC_2d      = spec.EE_LC.transpose();       EE_NC_med   = np.nanmedian(spec.EE_LC,      axis=0)\n",
-    "E_DoPuv_LC_2d = spec.E_DoLuv_LC.transpose();  E_DoPuv_NC_med = np.nanmedian(spec.E_DoPuv_LC, axis=0)\n",
-    "E_DoPvw_LC_2d = spec.E_DoLvw_LC.transpose();  E_DoPvw_NC_med = np.nanmedian(spec.E_DoPvw_LC, axis=0)\n",
-    "E_DoPwu_LC_2d = spec.E_DoLwu_LC.transpose();  E_DoPwu_NC_med = np.nanmedian(spec.E_DoPwu_LC, axis=0)\n",
-    "E_DoLuv_LC_2d = spec.E_DoLuv_LC.transpose();  E_DoLuv_NC_med = np.nanmedian(spec.E_DoLuv_LC, axis=0)\n",
-    "E_DoLvw_LC_2d = spec.E_DoLvw_LC.transpose();  E_DoLvw_NC_med = np.nanmedian(spec.E_DoLvw_LC, axis=0)\n",
-    "E_DoLwu_LC_2d = spec.E_DoLwu_LC.transpose();  E_DoLwu_NC_med = np.nanmedian(spec.E_DoLwu_LC, axis=0)\n",
-    "E_DoCuv_LC_2d = spec.E_DoCuv_LC.transpose();  E_DoCuv_NC_med = np.nanmedian(spec.E_DoCuv_LC, axis=0)\n",
-    "E_DoCvw_LC_2d = spec.E_DoCvw_LC.transpose();  E_DoCvw_NC_med = np.nanmedian(spec.E_DoCvw_LC, axis=0)\n",
-    "E_DoCwu_LC_2d = spec.E_DoCwu_LC.transpose();  E_DoCwu_NC_med = np.nanmedian(spec.E_DoCwu_LC, axis=0)\n",
-    "E_ANGuv_LC_2d = spec.E_ANGuv_LC.transpose();  E_ANGuv_NC_med = np.nanmedian(spec.E_ANGuv_LC, axis=0)\n",
-    "E_ANGvw_LC_2d = spec.E_ANGvw_LC.transpose();  E_ANGvw_NC_med = np.nanmedian(spec.E_ANGvw_LC, axis=0)\n",
-    "E_ANGwu_LC_2d = spec.E_ANGwu_LC.transpose();  E_ANGwu_NC_med = np.nanmedian(spec.E_ANGwu_LC, axis=0)\n",
-    "E_COHuv_LC_2d = spec.E_ANGwu_LC.transpose();  E_COHuv_NC_med = np.nanmedian(spec.E_COHuv_LC, axis=0)\n",
-    "E_COHvw_LC_2d = spec.E_ANGwu_LC.transpose();  E_COHvw_NC_med = np.nanmedian(spec.E_COHvw_LC, axis=0)\n",
-    "E_COHwu_LC_2d = spec.E_ANGwu_LC.transpose();  E_COHwu_NC_med = np.nanmedian(spec.E_COHwu_LC, axis=0)\n",
-    "E_PHAuv_LC_2d = spec.E_ANGwu_LC.transpose();  E_PHAuv_NC_med = np.nanmedian(spec.E_PHAuv_LC, axis=0)\n",
-    "E_PHAvw_LC_2d = spec.E_ANGwu_LC.transpose();  E_PHAvw_NC_med = np.nanmedian(spec.E_PHAvw_LC, axis=0)\n",
-    "E_PHAwu_LC_2d = spec.E_ANGwu_LC.transpose();  E_PHAwu_NC_med = np.nanmedian(spec.E_PHAwu_LC, axis=0)\n",
+    "    spec.EE_LC    = spec.EuEu_LC + spec.EvEv_LC + spec.EwEw_LC\n",
+    "    EuEu_LC_2d    = spec.EuEu_LC.transpose();     EuEu_NC_med = np.nanmedian(spec.EuEu_LC,    axis=0)\n",
+    "    EvEv_LC_2d    = spec.EvEv_LC.transpose();     EvEv_NC_med = np.nanmedian(spec.EvEv_LC,    axis=0)\n",
+    "    EwEw_LC_2d    = spec.EwEw_LC.transpose();     EwEw_NC_med = np.nanmedian(spec.EwEw_LC,    axis=0)\n",
+    "    EE_LC_2d      = spec.EE_LC.transpose();       EE_NC_med   = np.nanmedian(spec.EE_LC,      axis=0)\n",
+    "    E_DoPuv_LC_2d = spec.E_DoLuv_LC.transpose();  E_DoPuv_NC_med = np.nanmedian(spec.E_DoPuv_LC, axis=0)\n",
+    "    E_DoPvw_LC_2d = spec.E_DoLvw_LC.transpose();  E_DoPvw_NC_med = np.nanmedian(spec.E_DoPvw_LC, axis=0)\n",
+    "    E_DoPwu_LC_2d = spec.E_DoLwu_LC.transpose();  E_DoPwu_NC_med = np.nanmedian(spec.E_DoPwu_LC, axis=0)\n",
+    "    E_DoLuv_LC_2d = spec.E_DoLuv_LC.transpose();  E_DoLuv_NC_med = np.nanmedian(spec.E_DoLuv_LC, axis=0)\n",
+    "    E_DoLvw_LC_2d = spec.E_DoLvw_LC.transpose();  E_DoLvw_NC_med = np.nanmedian(spec.E_DoLvw_LC, axis=0)\n",
+    "    E_DoLwu_LC_2d = spec.E_DoLwu_LC.transpose();  E_DoLwu_NC_med = np.nanmedian(spec.E_DoLwu_LC, axis=0)\n",
+    "    E_DoCuv_LC_2d = spec.E_DoCuv_LC.transpose();  E_DoCuv_NC_med = np.nanmedian(spec.E_DoCuv_LC, axis=0)\n",
+    "    E_DoCvw_LC_2d = spec.E_DoCvw_LC.transpose();  E_DoCvw_NC_med = np.nanmedian(spec.E_DoCvw_LC, axis=0)\n",
+    "    E_DoCwu_LC_2d = spec.E_DoCwu_LC.transpose();  E_DoCwu_NC_med = np.nanmedian(spec.E_DoCwu_LC, axis=0)\n",
+    "    E_ANGuv_LC_2d = spec.E_ANGuv_LC.transpose();  E_ANGuv_NC_med = np.nanmedian(spec.E_ANGuv_LC, axis=0)\n",
+    "    E_ANGvw_LC_2d = spec.E_ANGvw_LC.transpose();  E_ANGvw_NC_med = np.nanmedian(spec.E_ANGvw_LC, axis=0)\n",
+    "    E_ANGwu_LC_2d = spec.E_ANGwu_LC.transpose();  E_ANGwu_NC_med = np.nanmedian(spec.E_ANGwu_LC, axis=0)\n",
+    "    E_COHuv_LC_2d = spec.E_ANGwu_LC.transpose();  E_COHuv_NC_med = np.nanmedian(spec.E_COHuv_LC, axis=0)\n",
+    "    E_COHvw_LC_2d = spec.E_ANGwu_LC.transpose();  E_COHvw_NC_med = np.nanmedian(spec.E_COHvw_LC, axis=0)\n",
+    "    E_COHwu_LC_2d = spec.E_ANGwu_LC.transpose();  E_COHwu_NC_med = np.nanmedian(spec.E_COHwu_LC, axis=0)\n",
+    "    E_PHAuv_LC_2d = spec.E_ANGwu_LC.transpose();  E_PHAuv_NC_med = np.nanmedian(spec.E_PHAuv_LC, axis=0)\n",
+    "    E_PHAvw_LC_2d = spec.E_ANGwu_LC.transpose();  E_PHAvw_NC_med = np.nanmedian(spec.E_PHAvw_LC, axis=0)\n",
+    "    E_PHAwu_LC_2d = spec.E_ANGwu_LC.transpose();  E_PHAwu_NC_med = np.nanmedian(spec.E_PHAwu_LC, axis=0)\n",
     "\n",
     "f_min0 = freq_1d[0];  f_max0 = freq_1d[N_frequency-1]\n",
     "print(spec.str_unit, \"   f_MAX/min:\", f_max0, f_min0, \"   num of f, step, window:\", N_frequency, data.freq_step[0][0], data.freq_width[0][0])"
@@ -1220,7 +1221,6 @@
    "outputs": [],
    "source": [
     "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
-    "# n0 = 60;  n1 = 63;   n2 = 66\n",
     "p_min = p_min0;  p_max = p_max0\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "\n",
@@ -1314,7 +1314,6 @@
    "outputs": [],
    "source": [
     "p_min = p_min0;  p_max = p_max0\n",
-    "# p_min = -4.0;    p_max = -0.0\n",
     "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
     "# n0 = 64;  n1 = 65;   n2 = 66\n",
     "f_min = f_min0;  f_max = f_max0\n",
