CAL update for RWI elec input (tentative): lib/juice_cal_lib.py

--- a/JUICE-Orbit.ipynb
+++ b/JUICE-Orbit.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE ORBIT QL -- 2024/8/21"
+    "# JUICE ORBIT QL -- 2025/3/19"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,15 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spice_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/spice/juice/kernels/'\n",
-    "\n",
+    "spice_dir = './mk/'\n",
     "juice_spice.spice_ini(spice_dir)\n",
-    "# juice_spice.spice_predict_ini(spice_dir)\n",
-    "\n",
     "save_folder_path = \"/Users/user/0-python/JUICE_python/ql/\""
    ]
   },
@@ -71,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +171,7 @@
     "plt.ylabel(\"GSE-Z: Distance from Moon [Rm] / IAU_EARTH north\")\n",
     "plt.text(int(x[0] / re), int(z[0] / re), utctim)\n",
     "plt.text(int(x[-1] / re), int(z[-1] / re), spice.et2datetime(et[-1]))\n",
-    "plt.show()\n",
+    "#plt.show()\n",
     "\n",
     "# plot\n",
     "plt.plot(et, r / re)  # x 地球から見た太陽方向\n",
@@ -185,7 +182,7 @@
     "x_values = [et[0], et[-1]]\n",
     "x_labels = [spice.et2datetime(et[0]), spice.et2datetime(et[-1])]\n",
     "plt.xticks(x_values, x_labels)\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -197,12 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set date/time\n",
-    "utctim = \"2023-04-14T00:00:00\"  # start date/time\n",
+    "utctim = \"2023-04-15T00:00:00\"  # start date/time\n",
     "et_ex = spice.str2et(utctim)  # seconds\n",
     "nd = 365 * 10  # number of data\n",
     "dt = 60 * 60 * 24  # time step [second]\n",
@@ -244,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +558,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -575,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   },
   "orig_nbformat": 4
  },
