--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -83,8 +83,8 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL set ***\n",
-    "unit_mode = 1                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]   0: background   1: CAL     2: all\n",
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -99,15 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ae791a7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "RIME_mode = 0                           # [RIME rejection]  0: n/a  1: RIME reject\n",
+    "RIME_mode = 1                           # [RIME rejection]  0: n/a  1: RIME reject\n",
     "RFI_mode  = 0                           # [RFI  rejection]  0: n/a  1: 200kHz reject\n",
-    "f_min     = 1000                        # [Frequency sel]   max - min\n",
-    "f_max     = 10000                       # [Frequency sel]   max - min"
+    "f_min     = 0                           # [Frequency sel]   max - min\n",
+    "f_max     = 1000                        # [Frequency sel]   max - min"
    ]
   },
   {
@@ -119,12 +119,11 @@
    "source": [
     "# *** Flight data: Ver.2 ***\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
-    "\"\"\"\n",
     "# 202401\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/'\n",
     "data_name_list = ['2024/01/26/JUICE_L1a_RPWI-HF-SID23_20240126T092930_V01.cdf',    # 1.5MHz\n",
     "                  '2024/01/26/JUICE_L1a_RPWI-HF-SID23_20240126T094802_V01.cdf',    # 1.5MHz\n",
     "                  ]\n",
+    "\"\"\"\n",
     "# 202407 -- CO2\n",
     "data_name_list = ['2024/07/06/JUICE_L1a_RPWI-HF-SID23_20240706T023200_V01.cdf',\n",
     "                  '2024/07/06/JUICE_L1a_RPWI-HF-SID23_20240706T124753_V01.cdf',\n",
@@ -289,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7fe288b1",
    "metadata": {},
    "outputs": [],
@@ -436,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b27c5edc",
    "metadata": {},
    "outputs": [],
@@ -588,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = np.int16(n_time0/2)\n",
+    "n_sweep = n_time0//2\n",
     "n_block = 0\n",
     "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
     "\n",
@@ -611,38 +610,6 @@
     "# xlim=[0.00159, 0.00187]   # 0.28msec\n",
     "# xlim=[334, 415]             # 81 * 3.37837832e-06 = 0.28msec\n",
     "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)];  ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
-    "\n",
-    "fig.subplots_adjust(hspace=0);  fig.show\n",
-    "if dump_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_raw-block.png'\n",
-    "    fig.savefig(png_fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d81032e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_sweep = np.int16(n_time0//2)\n",
-    "n_block = 2\n",
-    "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
-    "\n",
-    "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
-    "\n",
-    "wave.EE = wave.Eu_i*wave.Eu_i + wave.Eu_q*wave.Eu_q # + wave.Ev_i*wave.Ev_i + wave.Ev_q*wave.Ev_q + wave.Ew_i*wave.Ew_i + wave.Ew_q*wave.Ew_q\n",
-    "ax1.plot(data.time[n_sweep][n_block], wave.EE[n_sweep][n_block], '-b', linewidth=.5, label='EE')\n",
-    "ax1.set_ylabel('EE')\n",
-    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
-    "ax1.legend(loc='upper right', fontsize=8)\n",
-    "ax1.set_yscale('log')\n",
-    "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S') + \"    time [sec]  (0.001sec delay = 150-km distance)\";  ax1.set_xlabel(date)\n",
-    "\n",
-    "xlim=[data.time[n_sweep][n_block][0], data.time[n_sweep][n_block][-1]];  print(xlim);  ax1.set_xlim(xlim)\n",
-    "# xlim=[0.00159, 0.00187]   # 0.28msec\n",
-    "# xlim=[334, 415]           # 81 * 3.37837832e-06 = 0.28msec\n",
-    "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]; ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
     "\n",
     "fig.subplots_adjust(hspace=0);  fig.show\n",
     "if dump_mode == 1:\n",
@@ -705,6 +672,50 @@
     "spec.EE      = spec.EuEu + spec.EvEv + spec.EwEw \n",
     "\n",
     "p_max1 = p_raw_max + spec.cf/10; p_min1 = p_raw_min + spec.cf/10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fda58050",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spec = juice_spec.hf_getspec_angle    (spec, 23)     # Coherency & ange\n",
+    "# spec = juice_spec.hf_getspec_stokes   (spec, 23)     # Stokes and Polarization Parameters "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae1edaa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sweep = np.int16(n_time0/2)\n",
+    "n_block = 0\n",
+    "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
+    "\n",
+    "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
+    "\n",
+    "wave.EE = wave.Eu_i*wave.Eu_i + wave.Eu_q*wave.Eu_q # + wave.Ev_i*wave.Ev_i + wave.Ev_q*wave.Ev_q + wave.Ew_i*wave.Ew_i + wave.Ew_q*wave.Ew_q\n",
+    "ax1.plot(data.time[n_sweep][n_block], wave.EE[n_sweep][n_block], '-b', linewidth=.5, label='EE')\n",
+    "ax1.set_ylabel('EE ' +spec.str_unit)\n",
+    "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
+    "ax1.legend(loc='upper right', fontsize=8)\n",
+    "ax1.set_yscale('log')\n",
+    "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S') + \"    time [sec]  (0.001sec delay = 150-km distance)\";  ax1.set_xlabel(date)\n",
+    "\n",
+    "xlim=[data.time[n_sweep][n_block][0], data.time[n_sweep][n_block][-1]];  \n",
+    "# xlim=[0.0027, 0.0033]   # 0.28msec\n",
+    "print(xlim);  ax1.set_xlim(xlim)\n",
+    "# xlim=[334, 415]           # 81 * 3.37837832e-06 = 0.28msec\n",
+    "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]; ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
+    "\n",
+    "fig.subplots_adjust(hspace=0);  fig.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_raw-block.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -883,6 +894,7 @@
    "source": [
     "n_sweep = n_time0-1;  print(\"[last]  SWEEP:\", n_num0, \"in total of\", n_time0)\n",
     "p_min = p_min1-2;  p_max = p_max1\n",
+    "p_min = -12.0;    p_max = -6.0\n",
     "f_min = spec.freq[n_sweep][0][0];  f_max = spec.freq[n_sweep][0][-1]; d_freq = spec.freq[n_sweep][0][1]-spec.freq[n_sweep][0][0]\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11))\n",
@@ -1364,7 +1376,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -1378,7 +1390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
