--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/10/16"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2025/3/21"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -82,12 +82,12 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 3                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
-    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
     "gap_mode  = 0                           # [gap]       0: n/a     1: gap\n",
     "# *** Frenquency in Linear ***\n",
     "f_mode_min = 3000;  f_mode_max = 10000  # 80 - 2068 : as same as SID-4/20\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fb0e1af4",
    "metadata": {},
    "outputs": [],
@@ -126,15 +126,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# date='20230419'\n",
-    "# date='20230530'   # CAL\n",
-    "# date='20230601'\n",
-    "# date='20230712'\n",
-    "# date='20230713'\n",
-    "# date='20240125'\n",
-    "date='20240822'   # CAL\n",
-    "# date='0'\n",
-    "ver = 'V02'\n",
+    "# date='20230419';  ver = 'V03'\n",
+    "# date='20230530';  ver = 'V02'   # CAL     **** V02 has old format. ****\n",
+    "# date='20230601';  ver = 'V03'             **** V02 has old format. ****\n",
+    "# date='20230712';  ver = 'V03'\n",
+    "# date='20230713';  ver = 'V03'\n",
+    "# date='20240125';  ver = 'V02'\n",
+    "date='20240822';  ver = 'V02'   # CAL\n",
+    "# date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -599,7 +598,7 @@
     "n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "p_min = p_min1;  p_max = p_max1\n",
     "f_min = f_min0;  f_max = f_max0\n",
-    "# f_min = 1500;  f_max = 1600\n",
+    "# f_min = 1540;  f_max = 1560\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "\n",
@@ -934,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "8c6aa899",
    "metadata": {},
    "outputs": [],
@@ -968,6 +967,7 @@
    "source": [
     "n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "p_min = p_min1;  p_max = p_max1\n",
+    "# p_min = -15;     p_max = -10\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
@@ -1082,18 +1082,21 @@
    "outputs": [],
    "source": [
     "p_min = p_min1;  p_max = p_max1\n",
+    "# p_min = -15;     p_max = -10\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "# f_min = 80;      f_max = 2068\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  \n",
     "\n",
-    "fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(14, 4))\n",
+    "# fig = plt.figure(figsize=(8, 6))\n",
     "ax1 = fig.add_subplot(1, 1, 1)\n",
-    "ax1.plot(freq_1d,     EuEu_med, ':r', linewidth=1, label='EuEu ave')\n",
-    "ax1.plot(freq_1d,     EvEv_med, ':g', linewidth=1, label='EvEv ave')\n",
-    "ax1.plot(freq_1d,     EwEw_med, ':b', linewidth=1, label='EwEw ave')\n",
-    "ax1.plot(freq_1d,     EE_med,   '-y', linewidth=1, label='EE ave')\n",
-    "ax1.plot(freq_1d_msk, EE_msk,   '-r', linewidth=1, label='EE mask')\n",
+    "#ax1.plot(freq_1d,     EuEu_med, ':r', linewidth=1, label='EuEu ave')\n",
+    "#ax1.plot(freq_1d,     EvEv_med, ':g', linewidth=1, label='EvEv ave')\n",
+    "#ax1.plot(freq_1d,     EwEw_med, ':b', linewidth=1, label='EwEw ave')\n",
+    "EE_med2 = EuEu_med + EvEv_med + EwEw_med\n",
+    "ax1.plot(freq_1d,     EE_med2,   '-g', linewidth=1, label='EE ave')\n",
+    "ax1.plot(freq_1d_msk, EE_msk,   '-b', linewidth=1, label='EE mask')\n",
     "ax1.plot(mask_list[:,0], mask_list[:,2]*15*10**p_min, '.r', label='mask')\n",
     "ax1.set_yscale('log')\n",
     "if f_mode == 1:\n",
@@ -1194,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5edc2854",
    "metadata": {},
    "outputs": [],
@@ -1214,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "57ad12eb",
    "metadata": {},
    "outputs": [],
@@ -1713,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "d1145016",
    "metadata": {},
    "outputs": [],
@@ -1845,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "3bca480c",
    "metadata": {},
    "outputs": [],
@@ -1982,7 +1985,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -1996,7 +1999,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
