--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/10/16"
+    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2025/03/21"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0e4d518e",
    "metadata": {},
    "outputs": [],
@@ -82,12 +82,12 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "unit_mode = 3                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "cal_mode  = 1                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
-    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
     "gap_mode  = 0                           # [gap]       0: n/a     1: gap\n",
     "# *** Frenquency in Linear ***\n",
     "f_mode_min = 3000;  f_mode_max = 10000  # 80 - 2068 : as same as SID-4/20\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1eebed95",
    "metadata": {},
    "outputs": [],
@@ -140,15 +140,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# date='20230419'\n",
-    "date='20230530'   # CAL\n",
-    "# date='20230601'\n",
-    "# date='20230712'\n",
-    "# date='20230713'\n",
-    "# date='20240125'\n",
-    "# date='20240822'   # CAL\n",
-    "# date='0'\n",
-    "ver = 'V02'\n",
+    "# date='20230419';  ver = 'V03'\n",
+    "# date='20230530';  ver = 'V02'   # CAL     **** V02 has old format. ****\n",
+    "# date='20230601';  ver = 'V03'             **** V02 has old format. ****\n",
+    "# date='20230712';  ver = 'V03'\n",
+    "# date='20230713';  ver = 'V03'\n",
+    "# date='20240125';  ver = 'V02'\n",
+    "date='20240822';  ver = 'V02'   # CAL\n",
+    "# date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -772,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "a12b1985",
    "metadata": {},
    "outputs": [],
@@ -881,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "fe30538a",
    "metadata": {},
    "outputs": [],
@@ -936,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "e11dbaee",
    "metadata": {},
    "outputs": [],
@@ -1150,7 +1149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -1164,7 +1163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
