--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/10/19"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2025/3/21"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -77,8 +77,8 @@
     "# *** Dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3bcac391",
    "metadata": {},
    "outputs": [],
@@ -106,13 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8dc60bee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "E_min = '2024-08-19 21:05:00';  t_min0 = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\")\n",
-    "E_max = '2024-08-19 21:10:00';  t_max0 = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\")\n",
+    "E_min = '2024-08-20 00:00:00';  t_min0 = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\")\n",
+    "E_max = '2024-08-24 00:00:00';  t_max0 = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\")\n",
     "t_min0 = 0;  t_max0 = 0"
    ]
   },
@@ -132,18 +132,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# date='20230420';  ver = 'V02'\n",
-    "# date='20230523';  ver = 'V02'\n",
-    "# date='20230525';  ver = 'V02'\n",
+    "# date='20230420';  ver = 'V03'\n",
+    "# date='20230523';  ver = 'V03'\n",
+    "# date='20230525';  ver = 'V03'\n",
     "# date='20240126';  ver = 'V02'\n",
     "# date='20240701';  ver = 'V02'\n",
     "# date='20240706';  ver = 'V02'\n",
     "# date='20240819';  ver = 'V02'\n",
-    "date='20240820';  ver = 'V02'\n",
+    "# date='20240820';  ver = 'V02'\n",
     "# date='20240822';  ver = 'V02'   # CAL\n",
     "# date='20240823';  ver = 'V02'\n",
-    "# date='20240909';  ver = 'V02'\n",
-    "# date='0';           ver = 'V02'\n",
+    "date='20240909';  ver = 'V02'\n",
+    "# date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -372,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = n_time1//2;  peak_E = np.ravel(spec.EuEu[n_sweep]);  peak_f = np.nanargmax(peak_E); \n",
+    "n_sweep = n_time1//3;  peak_E = np.ravel(spec.EuEu[n_sweep]);  peak_f = np.nanargmax(peak_E); \n",
     "print(f\"[SWEEP - {n_sweep}]  Peak at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\", peak_f)\n",
     "print(\"     EuEu:\", '{:+.2e}'.format(np.ravel(spec.EuEu   [n_sweep])[peak_f]), spec.str_unit, \"     EvEv:\", '{:+.2e}'.format(np.ravel(spec.EvEv   [n_sweep])[peak_f]), spec.str_unit, \"   EwEw:\", '{:+.2e}'.format(np.ravel(spec.EwEw   [n_sweep])[peak_f]), spec.str_unit)\n",
     "if (spec.complex[0]>0):\n",
@@ -387,11 +387,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "62919dea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec.EuEu[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "250cc979",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = 0+1;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-2\n",
+    "n_sweep1 = n_time0//10;  n_sweep2 = n_time0//3;  n_sweep3 = n_time0-1\n",
     "print(f\"[First peak - {n_sweep1}]\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
@@ -561,16 +571,6 @@
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
     "    fig.savefig(png_fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1244469",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.epoch"
    ]
   },
   {
@@ -1314,7 +1314,7 @@
    "outputs": [],
    "source": [
     "p_min = p_min0;  p_max = p_max0\n",
-    "n0 = 0;  n1 = n_time0//2;   n2 = n_time0-1\n",
+    "n0 = 0;  n1 = n_time0//4;   n2 = n_time0-1\n",
     "# n0 = 64;  n1 = 65;   n2 = 66\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "# f_min = 80;       f_max = 2068\n",
@@ -1657,8 +1657,8 @@
     "        xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "    else:\n",
     "        xlim=[t_min0, t_max0]\n",
-    "    #E_min = '2024-08-21 04:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    #E_max = '2024-08-21 19:00:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim)\n",
     "\n",
@@ -1710,7 +1710,7 @@
     "        else:\n",
     "            xlim=[t_min0, t_max0]\n",
     "        # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        # E_max = '2024-08-21 05:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "        # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim)\n",
     "\n",
@@ -1762,7 +1762,7 @@
     "        else:\n",
     "            xlim=[t_min0, t_max0]\n",
     "        # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        # E_max = '2024-08-21 05:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "        # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim)\n",
     "\n",
@@ -1814,7 +1814,7 @@
     "        else:\n",
     "            xlim=[t_min0, t_max0]\n",
     "        # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        # E_max = '2024-08-21 05:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "        # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim)\n",
     "\n",
@@ -1900,8 +1900,8 @@
     "            xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "        else:\n",
     "            xlim=[t_min0, t_max0]\n",
-    "        E_min = '2024-08-22 09:50:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        E_max = '2024-08-22 10:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "        # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "        # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "    ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
@@ -2054,8 +2054,8 @@
     "            xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "        else:\n",
     "            xlim=[t_min0, t_max0]\n",
-    "        # E_min = '2024-08-21 17:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        # E_max = '2024-08-21 19:00:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "        # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "        # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "    ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
@@ -2137,7 +2137,7 @@
     "        else:\n",
     "            xlim=[t_min0, t_max0]\n",
     "        # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        # E_max = '2024-08-21 05:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "        # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "    ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
@@ -2219,7 +2219,7 @@
     "        else:\n",
     "            xlim=[t_min0, t_max0]\n",
     "        # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        # E_max = '2024-08-21 05:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "        # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "    ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
@@ -2301,7 +2301,7 @@
     "        else:\n",
     "            xlim=[t_min0, t_max0]\n",
     "        # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        # E_max = '2024-08-21 05:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "        # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "    ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
@@ -2382,7 +2382,7 @@
     "        else:\n",
     "            xlim=[t_min0, t_max0]\n",
     "        # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "        # E_max = '2024-08-21 05:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "        # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "        print(\"==>\", xlim)\n",
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "    ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
@@ -2404,9 +2404,8 @@
    "source": [
     "# FT & Cir\n",
     "p_min = p_min0;  p_max = p_max0\n",
-    "#p_min = -14;     p_max = -12\n",
     "f_min = f_min0;  f_max = f_max0\n",
-    "#f_min = 100;     f_max = 1000\n",
+    "f_min = 80;      f_max = 1000\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "\n",
@@ -2421,7 +2420,7 @@
     "ax1.set_ylabel('EvEv [kHz]');          ax2.set_ylabel('D.Cir VW');        ax1.set_title(\"[\" + data_name + \"]  \")\n",
     "\n",
     "if time_mode == 1:\n",
-    "    p1 = ax1.pcolormesh(num_1d,   freq_1d, EuEu_2d,    norm=colors.LogNorm  (vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p1 = ax1.pcolormesh(num_1d,   freq_1d, EE_2d,      norm=colors.LogNorm  (vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(num_1d,   freq_1d, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01,     vmax=1.01),      cmap='bwr')\n",
     "    p3 = ax3.plot(np.ravel(data.epoch[:]), '.')\n",
     "    pp1 = fig2d.colorbar(p1, ax=ax3, orientation=\"vertical\"); pp1.set_label(spec.str_unit)\n",
@@ -2439,9 +2438,9 @@
     "        xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "    else:\n",
     "        xlim=[t_min0, t_max0]\n",
-    "    #E_min = '2024-08-23 04:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    #E_max = '2024-08-23 22:00:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
-    "    # print(\"==>\", xlim)\n",
+    "    # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim);  ax2.set_xlim(xlim)\n",
     "\n",
     "plt.subplots_adjust(hspace=0.02);  plt.show()\n",
@@ -2463,7 +2462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "858b40e5",
    "metadata": {},
    "outputs": [],
@@ -2494,6 +2493,7 @@
    "source": [
     "n0 = 0;  n1 = n_time0//2;  n2 = n_time0-1\n",
     "p_min = p_min0;  p_max = p_max0\n",
+    "p_min = -15;     p_max = -10\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
@@ -2659,8 +2659,8 @@
     "        xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "    else:\n",
     "        xlim=[t_min0, t_max0]\n",
-    "    #E_min = '2024-08-20 22:00:00';  t1_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    #E_max = '2024-08-20 23:20:00';  t1_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
@@ -2679,8 +2679,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_min = p_min0+1.5;  p_max = p_max0\n",
-    "p_min = p_min0+1.5;  p_max = p_max0-1.5\n",
+    "p_min = p_min0;  p_max = p_max0\n",
+    "# p_min = p_min0+1.5;  p_max = p_max0-1.5\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
@@ -2713,8 +2713,8 @@
     "        xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "    else:\n",
     "        xlim=[t_min0, t_max0]\n",
-    "    E_min = '2024-09-09 10:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    E_max = '2024-09-09 10:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    # E_min = '2024-08-20 18:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    # E_max = '2024-08-21 03:30:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim)\n",
     "\n",
@@ -2746,7 +2746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -2760,7 +2760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
