--- a/JUICE-CDF-HF-SID4-20_sample.ipynb
+++ b/JUICE-CDF-HF-SID4-20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2024/10/16"
+    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2024/11/6"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "05e8da84",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "02845145",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b3da529e",
    "metadata": {},
    "outputs": [],
@@ -137,8 +137,8 @@
    "source": [
     "# *** Flight data: Ver.2 ***\n",
     "# date='20240126'\n",
-    "date='20240706'\n",
-    "# date='20240819'\n",
+    "# date='20240706'\n",
+    "date='20240819'\n",
     "# date='0'\n",
     "ver = 'V02'\n",
     "sid = 20\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "59ed286a",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ed75283e",
    "metadata": {},
    "outputs": [],
@@ -832,43 +832,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# FT & Cir\n",
     "p_min = p_min0;  p_max = p_max0\n",
+    "# p_min = -15;     p_max = -11\n",
     "f_min = f_min0;  f_max = f_max0\n",
+    "# f_min = 80;     f_max = 600\n",
     "\n",
-    "fig2d = plt.figure(figsize=[16,11])\n",
+    "# fig2d = plt.figure(figsize=[16,11])\n",
+    "fig2d = plt.figure(figsize=[8,8])\n",
     "if time_mode == 1:\n",
+    "    ax1 = fig2d.add_subplot(3, 1, 1);  ax2 = fig2d.add_subplot(3, 1, 2);  ax3 = fig2d.add_subplot(3, 1, 3);  ax3.set_xlabel(str_date)\n",
+    "else:\n",
     "    ax1 = fig2d.add_subplot(2, 1, 1);  ax2 = fig2d.add_subplot(2, 1, 2);  ax2.set_xlabel(str_date)\n",
-    "else:\n",
-    "    ax1 = fig2d.add_subplot(1, 1, 1);                                     ax1.set_xlabel(str_date)\n",
-    "ax1.set_ylim(f_min, f_max)\n",
+    "ax1.set_ylim(f_min, f_max);            ax2.set_ylim(f_min, f_max); \n",
     "if f_mode == 1:\n",
-    "    ax1.set_yscale('log')\n",
-    "ax1.set_ylabel('EE [kHz]');  ax1.set_title(\"[\" + data_name + \"]\")\n",
+    "    ax1.set_yscale('log');             ax2.set_yscale('log')\n",
+    "ax1.set_ylabel('EE [kHz]');            ax2.set_ylabel('D.Cir VW');        ax1.set_title(\"[\" + data_name + \"]  \")\n",
     "\n",
     "if time_mode == 1:\n",
-    "    p1 = ax1.pcolormesh(num_1d,   freq1, EE_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
-    "    p2 = ax4.plot(np.ravel(Epoch_2d[:]), '.')\n",
-    "    pp1 = fig2d.colorbar(p1, ax=ax2, orientation=\"vertical\"); pp1.set_label(spec.str_unit)\n",
+    "    p1 = ax1.pcolormesh(num_1d,   freq1, EE_2d,      norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p2 = ax2.pcolormesh(num_1d,   freq1, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01,   vmax=1.01),      cmap='bwr')\n",
+    "    p3 = ax3.plot(np.ravel(Epoch_2d[:]), '.')\n",
+    "    pp1 = fig2d.colorbar(p1, ax=ax3, orientation=\"vertical\"); pp1.set_label(spec.str_unit)\n",
     "else:\n",
-    "    p1 = ax1.pcolormesh(Epoch_2d, freq1, EE_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p1 = ax1.pcolormesh(Epoch_2d, freq1, EE_2d,      norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p2 = ax2.pcolormesh(Epoch_2d, freq1, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01,   vmax=1.01),      cmap='bwr')\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(spec.str_unit)\n",
+    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\")\n",
     "\n",
-    "print( \"(\", num_1d[0],\")\", Epoch_2d[0], \"-\", \"(\", num_1d[-1],\")\", Epoch_2d[-1] )\n",
+    "# print( \"(\", num_1d[0],\")\", Epoch_2d[0], \"-\", \"(\", num_1d[-1],\")\", Epoch_2d[-1] )\n",
     "if time_mode == 1:\n",
-    "    xlim=[num_1d[0], num_1d[-1]]\n",
-    "    # xlim=[num_1d[0], 100]\n",
-    "    ax4.set_xlim(xlim)\n",
+    "    xlim=[num_1d[0], num_1d[-1]]; ax3.set_xlim(xlim) \n",
     "else:\n",
-    "    if t_min0==0:\n",
+    "    if t_min0 == 0:\n",
     "        xlim=[Epoch_2d[0], Epoch_2d[-1]]\n",
     "    else:\n",
     "        xlim=[t_min0, t_max0]\n",
-    "    #E_min = '2024-08-20 22:00:00';  t1_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    #E_max = '2024-08-20 23:20:00';  t1_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    # E_min = '2024-08-19 20:30:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    # E_max = '2024-08-19 20:37:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    E_min = '2024-08-19 21:05:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    E_max = '2024-08-19 21:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
-    "ax1.set_xlim(xlim)\n",
+    "ax1.set_xlim(xlim);  ax2.set_xlim(xlim)\n",
     "\n",
-    "plt.subplots_adjust(hspace=.03);  plt.show()\n",
+    "plt.subplots_adjust(hspace=.1);  plt.show()\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_FT2.png'\n",
     "    if f_mode == 1:\n",
@@ -971,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
@@ -1231,7 +1238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
